@@ -16,16 +16,6 @@ directory`, the extension is stripped, and path separators are converted to
 slashes.  All values, parameters and suchlike referring to "documents" expect
 such a document name.
 
-.. cfunction:: Class::method(int bla, int foo) const
-
-   pass
-
-.. cmdoption:: --longopt <arg>
-
-.. class:: Test
-
-   .. method:: X
-
 
 The TOC tree
 ------------
